rewrote some logic